--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -5,63 +5,16 @@ title: "🏢 Open WebUI for Enterprise"
 
 import { Testimonals } from "@site/src/components/Testimonals";
 
+
 ## The AI Platform Powering the World's Leading Organizations
+
 
 Open WebUI is one of the fastest-growing AI platforms in the world. Designed for **seamless enterprise deployment**, Open WebUI enables businesses to deploy cutting-edge AI capabilities with **complete control** over their data, infrastructure, and roadmap.
 
-Whether you're a startup scaling fast or a Fortune 500 managing global operations, Open WebUI provides the reliability, security, and flexibility your teams need to deploy AI confidently and securely—**without vendor lock-in**.
+Whether you're a startup scaling fast or a Fortune 500 managing global operations, Open WebUI provides the reliability, security, and flexibility your teams need to deploy AI confidently and securely, **without vendor lock-in**.
+
 
 ![Open WebUI, Inc.](/images/enterprise/hero.png)
-
----
-
-## Let's Talk
-
-Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we're here to help.
-
-[**Contact Enterprise Sales**](mailto:sales@openwebui.com)
-
-:::tip Use Your Work Email
-To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, icloud.com) are often flagged by our system and may not receive a response.
-:::
-
-:::note Are you an Agency or Reseller?
-If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
-:::
-
----
-
-## Why Enterprises Choose Open WebUI
-
-### 🚀 Faster Innovation, No Vendor Lock-In
-Unlike proprietary AI platforms that dictate your path, **Open WebUI puts you in control**. Deploy on-premise, in a private cloud, or hybrid environments—without restrictive contracts.
-
-### 🔒 Enterprise-Grade Security & Compliance
-Security is a business-critical requirement. Open WebUI is built to support **SOC 2, HIPAA, GDPR, FedRAMP, and ISO 27001 compliance**, ensuring enterprise security best practices with on-premise and air-gapped deployments.
-
-### ⚡ Reliable, Scalable, and Performance-Optimized
-Built for large-scale enterprise deployments with multi-node high availability, Open WebUI can be configured to ensure **99.99% uptime**, optimized workloads, and scalability across regions and business units.
-
-### 💡 Fully Customizable & Modular
-**White-label the interface** to match your brand identity. Integrate proprietary or third-party AI models. Extend functionality to fit your organization's unique workflows—Open WebUI adapts to you, not the other way around.
-
----
-
-## Explore Enterprise Capabilities
-
-#### [🏗️ High Availability & Architecture](./architecture)
-Understand how Open WebUI supports large-scale deployments. Explore multi-node configurations designed for 99.99% uptime, workload optimization across regions, and architectural patterns for mission-critical reliability.
-
-#### [🛡️ Security & Governance](./security)
-Learn how Open WebUI integrates with your existing identity infrastructure—including LDAP, Active Directory, and SSO providers. Ideal for organizations requiring on-premise or air-gapped deployments.
-
-#### [🔧 Integration & Customization](./customization)
-Discover how to tailor Open WebUI to your enterprise. From white-labeling the interface to match your brand, to integrating proprietary AI models and building custom features.
-
-#### [🤝 Support & SLAs](./support)
-Review the dedicated support options available to enterprise customers. Support engagements are structured to match your organization's needs—from teams requiring branding flexibility to enterprises needing hands-on guidance.
-
----
 
 ## See Open WebUI in Action
 
@@ -79,21 +32,65 @@ Discover how [**Samsung Semiconductor Inc.**](https://semiconductor.samsung.com/
 
 ---
 
-## Free to Use, Built to Scale
+## Let's Talk
 
-:::info
-Open WebUI is **free to use** and our source code is publicly available. You can deploy it today without an enterprise agreement.
+Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we're here to help.
 
-We believe in democratizing access to AI. The Enterprise offerings above provide **governance, white labeling, liability protection, and dedicated support** for organizations that require them—but the core platform remains free and accessible to our community.
+[**Contact Enterprise Sales → sales@openwebui.com**](mailto:sales@openwebui.com)
+
+:::tip Use Your Work Email
+To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, icloud.com) are often flagged by our system and may not receive a response.
 :::
+
+:::note Are you an Agency or Reseller?
+If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
+:::
+
+---
+
+## Why Enterprises Choose Open WebUI
+
+### 🚀 Faster Innovation, No Vendor Lock-In
+Unlike proprietary AI platforms that dictate your path, **Open WebUI puts you in control**. Deploy on-premise, in a private cloud, or hybrid environments, without restrictive contracts.
+
+### 🔒 Enterprise-Grade Security & Compliance
+Security is a business-critical requirement. Open WebUI is built to support **SOC 2, HIPAA, GDPR, FedRAMP, and ISO 27001 compliance**, ensuring enterprise security best practices with on-premise and air-gapped deployments.
+
+### ⚡ Reliable, Scalable, and Performance-Optimized
+Built for large-scale enterprise deployments with multi-node high availability, Open WebUI can be configured to ensure **99.99% uptime**, optimized workloads, and scalability across regions and business units.
+
+### 💡 Fully Customizable & Modular
+**White-label the interface** to match your brand identity. Integrate proprietary or third-party AI models. Extend functionality to fit your organization's unique workflows, Open WebUI adapts to you, not the other way around.
+
+---
+
+## Explore Enterprise Capabilities
+
+#### [🏗️ High Availability & Architecture](./architecture)
+Understand how Open WebUI supports large-scale deployments. Explore multi-node configurations designed for 99.99% uptime, workload optimization across regions, and architectural patterns for mission-critical reliability.
+
+#### [🛡️ Security & Governance](./security)
+Learn how Open WebUI integrates with your existing identity infrastructure, including LDAP, Active Directory, and SSO providers. Ideal for organizations requiring on-premise or air-gapped deployments.
+
+#### [🔧 Integration & Customization](./customization)
+Discover how to tailor Open WebUI to your enterprise. From white-labeling the interface to match your brand, to integrating proprietary AI models and building custom features.
+
+#### [🤝 Support & SLAs](./support)
+Review the dedicated support options available to enterprise customers. Support engagements are structured to match your organization's needs, from teams requiring branding flexibility to enterprises needing hands-on guidance.
 
 ---
 
 ## Ready to Get Started?
 
+:::info
+Open WebUI is **free to use** and our source code is publicly available. You can deploy it today without an enterprise agreement.
+
+We believe in democratizing access to AI. The Enterprise offerings above provide **white labeling, and dedicated support** for organizations that require them, but the core platform remains free and accessible to our community.
+:::
+
 Ready to explore how Open WebUI can help you transform your organization?
 
-[**Contact Enterprise Sales →**](mailto:sales@openwebui.com)
+[**Contact Enterprise Sales → sales@openwebui.com**](mailto:sales@openwebui.com)
 
 ---
 
