--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -9,10 +9,9 @@ import { Testimonals } from "@site/src/components/Testimonals";
 ## The AI Platform Powering the World's Leading Organizations
 
 
-Open WebUI is one of the fastest-growing AI platforms in the world. Designed for **seamless enterprise deployment**, Open WebUI enables businesses to deploy cutting-edge AI capabilities with **complete control** over their data, infrastructure, and roadmap.
+Open WebUI is one of the **fastest-growing AI platforms** in the world. Designed for **seamless enterprise deployment**, Open WebUI enables businesses to deploy cutting-edge AI capabilities with **complete control** over their data, infrastructure, and roadmap.
 
 Whether you're a startup scaling fast or a Fortune 500 managing global operations, Open WebUI provides the reliability, security, and flexibility your teams need to deploy AI confidently and securely, **without vendor lock-in**.
-
 
 ![Open WebUI, Inc.](/images/enterprise/hero.png)
 
@@ -82,11 +81,14 @@ Review the dedicated support options available to enterprise customers. Support 
 
 ## Ready to Get Started?
 
-:::info
-Open WebUI is **free to use** and our source code is publicly available. You can deploy it today without an enterprise agreement.
+:::tip
 
-We believe in democratizing access to AI. The Enterprise offerings above provide **white labeling, and dedicated support** for organizations that require them, but the core platform remains free and accessible to our community.
+Open WebUI is **completely free to use as-is**, with no restrictions or hidden limits. You can deploy it today without an enterprise agreement.
+
+We are **sustained** by our users. **Optional** licenses are available to **support** ongoing development while providing **additional benefits such as white labeling, and dedicated support** for businesses.
+
 :::
+
 
 Ready to explore how Open WebUI can help you transform your organization?
 
