--- a/docs/enterprise/customers/index.mdx
+++ b/docs/enterprise/customers/index.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 5
-title: "👥 Customer Stories"
+sidebar_position: 0
+title: "Customer Stories"
 ---
 
 # Customer Stories
@@ -11,11 +11,9 @@ Open WebUI is the interface of choice for individuals, engineering teams, resear
 
 Many of our users work in environments where privacy isn't optional, it's essential. That's by design. Open WebUI is built for those who need powerful AI capabilities with complete control over their data.
 
-As our community grows, so does this showcase. We're proud to highlight those who are building in the open.
-
----
-
 ## Featured Case Study
+
+As our community grows, so does this showcase. We're proud to highlight those who are building in the open.
 
 ### Samsung Semiconductor
 
@@ -25,7 +23,6 @@ See how Samsung Semiconductor built a secure, self-hosted AI platform to boost R
 
 **[📖 Read the Full Case Study →](./samsung-semiconductor)**
 
----
 
 ## Share Your Story
 
