--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -6,7 +6,7 @@ title: "🏢 Open WebUI for Enterprise"
 import { Testimonals } from "@site/src/components/Testimonals";
 
 
-## The AI Platform Powering the World's Leading Organizations
+### The AI Platform Powering the World's Leading Organizations
 
 
 Open WebUI is one of the **fastest-growing AI platforms** in the world. Designed for **seamless enterprise deployment**, Open WebUI enables businesses to deploy cutting-edge AI capabilities with **complete control** over their data, infrastructure, and roadmap.
@@ -15,7 +15,7 @@ Whether you're a startup scaling fast or a Fortune 500 managing global operation
 
 ![Open WebUI, Inc.](/images/enterprise/hero.png)
 
-## See Open WebUI in Action
+### See Open WebUI in Action
 
 Explore how other organizations are driving real impact with Open WebUI.
 
@@ -31,7 +31,7 @@ Discover how [**Samsung Semiconductor Inc.**](https://semiconductor.samsung.com/
 
 ---
 
-## Let's Talk
+### Let's Talk
 
 Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we're here to help.
 
@@ -41,34 +41,34 @@ Whether you need a full enterprise deployment or just want to explore what Open 
 To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, icloud.com) are often flagged by our system and may not receive a response.
 :::
 
-:::note Are you an Agency or Reseller?
+:::warning Are you an Agency or Reseller?
 If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Guidelines for Agencies](./partners)**.
 :::
 
 ---
 
-## Why Enterprises Choose Open WebUI
+### Why Enterprises Choose Open WebUI
 
-### 🚀 Faster Innovation, No Vendor Lock-In
+#### 🚀 Faster Innovation, No Vendor Lock-In
 Unlike proprietary AI platforms that dictate your path, **Open WebUI puts you in control**. Deploy on-premise, in a private cloud, or hybrid environments, without restrictive contracts.
 
-### 🔒 Enterprise-Grade Security & Compliance
+#### 🔒 Enterprise-Grade Security & Compliance
 Security is a business-critical requirement. Open WebUI is built to support **SOC 2, HIPAA, GDPR, FedRAMP, and ISO 27001 compliance**, ensuring enterprise security best practices with on-premise and air-gapped deployments.
 
-### ⚡ Reliable, Scalable, and Performance-Optimized
+#### ⚡ Reliable, Scalable, and Performance-Optimized
 Built for large-scale enterprise deployments with multi-node high availability, Open WebUI can be configured to ensure **99.99% uptime**, optimized workloads, and scalability across regions and business units.
 
-### 💡 Fully Customizable & Modular
+#### 💡 Fully Customizable & Modular
 **White-label the interface** to match your brand identity. Integrate proprietary or third-party AI models. Extend functionality to fit your organization's unique workflows, Open WebUI adapts to you, not the other way around.
 
 ---
 
-## Explore Enterprise Capabilities
+### Explore Enterprise Capabilities
 
-#### [🏗️ High Availability & Architecture](./architecture)
+#### [🏗️ Architecture](./architecture)
 Understand how Open WebUI supports large-scale deployments. Explore multi-node configurations designed for 99.99% uptime, workload optimization across regions, and architectural patterns for mission-critical reliability.
 
-#### [🛡️ Security & Governance](./security)
+#### [🛡️ Security](./security)
 Learn how Open WebUI integrates with your existing identity infrastructure, including LDAP, Active Directory, and SSO providers. Ideal for organizations requiring on-premise or air-gapped deployments.
 
 #### [🔧 Integration & Customization](./customization)
@@ -79,7 +79,7 @@ Review the dedicated support options available to enterprise customers. Support 
 
 ---
 
-## Ready to Get Started?
+### Ready to Get Started?
 
 :::tip
 
@@ -96,7 +96,7 @@ Ready to explore how Open WebUI can help you transform your organization?
 
 ---
 
-## Keep Open WebUI Thriving ❤️
+### Keep Open WebUI Thriving ❤️
 
 Even if you **don't need an enterprise license**, consider becoming a **sponsor** to help fund continuous development.
 
