--- a/docs/enterprise/customers/index.mdx
+++ b/docs/enterprise/customers/index.mdx
@@ -3,28 +3,26 @@ sidebar_position: 0
 title: "Customer Stories"
 ---
 
-# Customer Stories
-
 ## Powering Innovation at Scale
 
 Open WebUI is the interface of choice for individuals, engineering teams, researchers, and enterprises worldwide. With thousands of active deployments, it powers AI initiatives across startups, Fortune 500 companies, government agencies, and research institutions, helping people reclaim time for what truly matters.
 
 Many of our users work in environments where privacy isn't optional, it's essential. That's by design. Open WebUI is built for those who need powerful AI capabilities with complete control over their data.
 
-## Featured Case Study
+### Featured Case Studies
 
 As our community grows, so does this showcase. We're proud to highlight those who are building in the open.
 
-### Samsung Semiconductor
+#### Samsung Semiconductor
 
 See how Samsung Semiconductor built a secure, self-hosted AI platform to boost R&D efficiency, reducing workflow times **from days to hours**.
 
-[![Samsung Semiconductor Case Study](/images/enterprise/customers/samsung-semiconductor/hero.png)](./samsung-semiconductor)
+[![Samsung Semiconductor Case Study](/images/enterprise/customers/samsung-semiconductor/hero.png)](/enterprise/customers/samsung-semiconductor)
 
-**[📖 Read the Full Case Study →](./samsung-semiconductor)**
+**[📖 Read the Full Case Study →](/enterprise/customers/samsung-semiconductor)**
 
 
-## Share Your Story
+### Share Your Story
 
 We're actively expanding this showcase with organizations and teams driving real impact with Open WebUI.
 
