--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -17,10 +17,6 @@ Whether you're a startup scaling fast or a Fortune 500 managing global operation
 
 ### See Open WebUI in Action
 
-Explore how other organizations are driving real impact with Open WebUI.
-
-#### Featured Customer Stories
-
 Discover how [**Samsung Semiconductor Inc.**](https://semiconductor.samsung.com/) built a secure, self-hosted AI platform using Open WebUI, reducing complex workflows from *days to hours* while maintaining strict data-security requirements.
 
 [Read the full story →](/enterprise/customers/samsung-semiconductor)
@@ -33,12 +29,18 @@ Discover how [**Samsung Semiconductor Inc.**](https://semiconductor.samsung.com/
 
 ### Let's Talk
 
-Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we're here to help.
-
-[**Contact Enterprise Sales → sales@openwebui.com**](mailto:sales@openwebui.com)
-
 :::tip Use Your Work Email
 To help us respond quickly, **please use your official work email address** and include your expected **end user count (seats)**. Personal email accounts (e.g., gmail.com, yahoo.com, icloud.com) are often flagged by our system and may not receive a response.
+:::
+
+Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we're here to help. Send us your deployment **end user count (seats)**, and let’s explore how we can work together!
+[**Contact Enterprise Sales → sales@openwebui.com**](mailto:sales@openwebui.com)
+
+:::info 
+
+Enterprise licenses and partnership opportunities are available **exclusively to registered entities and organizations**. At this time, we are unable to accommodate individual users. We appreciate your understanding and interest.
+
+**We are not seeking, open to, or in need of any form of disguised collaboration or contribution pitches/offers.** Any attempt to characterize engineering assistance, co-development, or roadmap input **as an alternative to our enterprise licensing program will not receive a response**. All organizational engagement with Open WebUI occurs **solely and exclusively through enterprise licensing**.
 :::
 
 :::warning Are you an Agency or Reseller?
