--- a/docs/troubleshooting/multi-replica.mdx
+++ b/docs/troubleshooting/multi-replica.mdx
@@ -116,6 +116,18 @@ The `/app/backend/data` directory is not shared or is not consistent across repl
 - **Kubernetes:** Use a `PersistentVolumeClaim` with `ReadWriteMany` (RWX) access mode if your storage provider supports it (e.g., NFS, CephFS, AWS EFS).
 - **Docker Swarm/Compose:** Mount a shared volume (e.g., NFS mount) to `/app/backend/data` on all containers.
 
+### 6. Slow Performance in Cloud vs. Local Kubernetes
+
+**Symptoms:**
+- Open WebUI performs well locally but experiences significant degradation or timeouts when deployed to cloud providers (AKS, EKS, GKE).
+- Performance drops sharply under concurrent load despite adequate resource allocation.
+
+**Cause:**
+This is typically caused by infrastructure latency (Network Latency to the database or Disk I/O latency for SQLite) that is inherently higher in cloud environments compared to local NVMe/SSD storage and local networks.
+
+**Solution:**
+Refer to the **[Cloud Infrastructure Latency](/tutorials/tips/performance#%EF%B8%8F-cloud-infrastructure-latency)** section in the Performance Guide for a detailed breakdown of diagnosis and mitigation strategies.
+
 ---
 
 ## Deployment Best Practices
@@ -156,6 +168,7 @@ While Open WebUI is designed to be stateless with proper Redis configuration, en
 ## Related Documentation
 
 - [Environment Variable Configuration](/getting-started/env-configuration)
+- [Optimization, Performance & RAM Usage](/tutorials/tips/performance)
 - [Troubleshooting Connection Errors](/troubleshooting/connection-error)
 - [Logging Configuration](/getting-started/advanced-topics/logging)
 
