--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -5382,6 +5382,14 @@ Ensure the database password is kept secure, as it is needed to decrypt and acce
 
 :::
 
+:::warning Migrating Existing Data to SQLCipher
+
+**Open WebUI does not support automatic migration from an unencrypted SQLite database to an encrypted SQLCipher database.** If you enable SQLCipher on an existing installation, the application will fail to read your existing unencrypted data.
+
+To use SQLCipher with existing data, you must either start fresh (with users exporting/re-importing chats), manually migrate the database using external SQLite/SQLCipher tools, use filesystem-level encryption (LUKS/BitLocker) instead, or switch to PostgreSQL.
+
+:::
+
 #### `DATABASE_SCHEMA`
 
 - Type: `str`
