--- a/docs/features/plugin/functions/filter.mdx
+++ b/docs/features/plugin/functions/filter.mdx
@@ -426,9 +426,9 @@ When multiple filters are active, each filter in the chain receives the **modifi
 ```
 User Input
     ↓
-Model Router Filter (priority=0) → changes body["model"] to "claude"
+Model Router Filter (priority=0) → changes parts of the body
     ↓
-Context Manager Filter (priority=1) → receives body with model="claude" ✓
+Context Manager Filter (priority=1) → receives modified body ✓
     ↓
 Logging Filter (priority=2) → receives body with all previous changes ✓
     ↓
@@ -443,83 +443,6 @@ async def inlet(self, body: dict, __event_emitter__) -> dict:
     body["messages"].append({"role": "system", "content": "Hello"})
     return body  # Don't forget this!
 ```
-:::
-
----
-
-### 🔀 Model Routing in Filters
-
-Filters can dynamically route messages to different models by modifying `body["model"]` in the `inlet` function. To ensure the UI also displays the correct model in real-time, you need to emit a `chat:model` event using the event emitter.
-
-#### Model Routing Example
-
-:::note Example Only
-This is a simplified example to demonstrate the model routing concept. The `requires_deep_reasoning()` method shown here is just placeholder logic—you would implement your own routing criteria based on your specific use case.
-:::
-
-```python
-from pydantic import BaseModel, Field
-from typing import Optional
-
-class Filter:
-    class Valves(BaseModel):
-        priority: int = Field(default=0, description="Filter priority")
-        simple_model: str = Field(
-            default="gemini-1.5-flash",
-            description="Model for simple queries"
-        )
-        complex_model: str = Field(
-            default="claude-3-opus",
-            description="Model for complex queries"
-        )
-    
-    def __init__(self):
-        self.valves = self.Valves()
-    
-    async def inlet(
-        self, body: dict, __event_emitter__, __user__: Optional[dict] = None
-    ) -> dict:
-        user_message = body["messages"][-1]["content"]
-        
-        # Route based on task complexity (implement your own logic)
-        if self.requires_deep_reasoning(user_message):
-            new_model = self.valves.complex_model
-        else:
-            new_model = self.valves.simple_model
-        
-        # Only emit event if model actually changed
-        if body.get("model") != new_model:
-            body["model"] = new_model
-            # Update UI to show the new model
-            await __event_emitter__(
-                {
-                    "type": "chat:model",
-                    "data": {"model": new_model},
-                }
-            )
-        
-        return body
-    
-    def requires_deep_reasoning(self, text: str) -> bool:
-        # Example logic - replace with your own criteria
-        complex_indicators = ["analyze", "debug", "explain why", "step by step"]
-        return any(indicator in text.lower() for indicator in complex_indicators)
-```
-
-**Key points:**
-- Filter functions should generally be `async` to ensure compatibility with future Open WebUI versions as the backend progressively moves toward fully async execution. Synchronous filters may block execution in future releases.
-- Include `__event_emitter__` in the function signature to emit events
-- Emit `chat:model` event with the new model ID to update the UI in real-time
-- The model change is automatically persisted to the database
-
-:::note UI Dropdown Behavior
-The model selector dropdown at the top of the chat is **not** automatically updated when a filter changes the model. This is intentional—the filter may make different routing decisions for each message, so changing the dropdown wouldn't make sense.
-
-If you want to also update the dropdown, you could potentially use JavaScript injection via the event emitter to simulate a click and change the model selection. However, this is generally not recommended for routing filters that may switch models on every message.
-
-**Tip:** You can use the [toggleable filter feature](#-toggleable-filters-vs-always-on-filters) to allow users to enable or disable model routing for a specific filter. This gives users control over when routing is active.
-
-For a complete list of all available event types you can emit, see the [Events documentation](/features/plugin/development/events).
 :::
 
 ---
